# axum-blog

./: .gitignore  Cargo.toml  README.md  blog.db
config/: config.dev.toml
examples/sea-orm-demo/: Cargo.toml
examples/sea-orm-demo/migration/: Cargo.toml
examples/sea-orm-demo/migration/src/: m20220101_000001_create_table.rs
examples/sea-orm-demo/model/: mod.rs  post.rs  post_tags.rs  prelude.rs  tags.rs
examples/template-demo/: Cargo.toml
examples/template-demo/src/: main.rs
examples/template-demo/templates/: index.html
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: error.rs  lib.rs  main.rs
src/app/: mod.rs
src/app/dao/: posts.rs
src/app/dto/: admin.rs  mod.rs  posts.rs
src/app/handler/: admin.rs  index.rs  mod.rs  posts.rs
src/boot/: config.rs  db.rs  logs.rs  mod.rs
src/handler/: posts.rs
src/models/: mod.rs  post.rs  post_tags.rs  prelude.rs  tags.rs  user.rs
src/routers/: admin.rs  middleware.rs  mod.rs
templates/backend/: edit_post.html  index.html  login.html  save_post.html
templates/backend/layout/: common.html
templates/frontend/: about.html  error.html  index.html  post_detail.html  search_result.html
templates/frontend/layout/: common.html  footer.html  header.html
